Cambios realizados modulo de seguridad